[package]
name = "onesignal-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
onesignal = { path = "/Users/iamwill/code/@onesignal/onesignal-rust-api" }
dotenv = "0.15.0"
